--- a/pages/post-single-4.html
+++ b/pages/post-single-4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
 	<title>Blogzine - Blog and Magazine Bootstrap 5 Theme</title>
 	<!-- Meta Tags -->
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Webestica.com">
 	<meta name="description" content="Bootstrap based News, Magazine and Blog Theme">
+	<link rel="canonical" href="../index.html" />
 
 	<!-- Dark mode -->
 	<script>
@@ -81,7 +82,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/vendor/glightbox/css/glightbox.css">
 
 	<!-- Theme CSS -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style-rtl.css">
 
 </head>
 
@@ -193,13 +194,13 @@ Header START -->
 								</a> 
 							</li>
 							<li> 
-								<a class="dropdown-item" href="docs/index.html" target="_blank">
+								<a class="dropdown-item" href="https://blogzine.webestica.com/rtl/docs/index.html" target="_blank">
 									<i class="text-danger fa-fw bi bi-card-text me-2"></i>Documentation
 								</a> 
 							</li>
 							<li class="dropdown-divider"></li>
 							<li> 
-								<a class="dropdown-item" href="rtl.html" target="_blank">
+								<a class="dropdown-item" href="../rtl.html" target="_blank">
 									<i class="text-info fa-fw bi bi-toggle-off me-2"></i>RTL demo
 								</a> 
 							</li>
