--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.css">
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -53,14 +53,45 @@
     </header>
 
 
-    <!--================== Main Content ==================-->
+    <!--======================================================================================= Main Content ==================-->
+
     <main class="wrapper">
+        <!--===================== card intro =======================-->
         <section id="hero" class="hero">
-            <div class="cards card-1"></div>
-            <div class="cards card-2"></div>
-            <div class="cards card-3"></div>
-            <div class="cards card-4"></div>
+            <div class="cards card-1">
+                <div class="card-content">
+                    <span class="tag">Soirée</span>
+                    <h2 class="title">Evento de Noche</h2>
+                    <p class="description">Una descripción ligera de lo que ocurrió durante la soirée.</p>
+                    <span class="date">Publicado el: 22 Oct 2024</span>
+                </div>
+            </div>
+            <div class="cards card-2">
+                <div class="card-content">
+                    <span class="tag">Conferencia</span>
+                    <h2 class="title">Conferencia de Seguridad</h2>
+                    <p class="description">Descripción breve sobre los temas discutidos.</p>
+                    <span class="date">Publicado el: 15 Oct 2024</span>
+                </div>
+            </div>
+            <div class="cards card-3">
+                <div class="card-content">
+                    <span class="tag">Workshop</span>
+                    <h2 class="title">Taller de Desarrollo Web</h2>
+                    <p class="description">Introducción a herramientas de desarrollo moderno.</p>
+                    <span class="date">Publicado el: 10 Oct 2024</span>
+                </div>
+            </div>
+            <div class="cards card-4">
+                <div class="card-content">
+                    <span class="tag">Meetup</span>
+                    <h2 class="title">Reunión de Desarrolladores</h2>
+                    <p class="description">Discutiendo nuevas tendencias en desarrollo.</p>
+                    <span class="date">Publicado el: 5 Oct 2024</span>
+                </div>
+            </div>
         </section>
+        <!--=========================================================-->>
 
 
 
