--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
         <section id="hero" class="hero">
             <div class="cards card-1">
                 <div class="card-content">
-                    <span class="tag">Soirée</span>
+                    <span class="tag tag-business">Soirée</span>
                     <h2 class="title">Evento de Noche</h2>
                     <p class="description">Una descripción ligera de lo que ocurrió durante la soirée.</p>
                     <span class="date">Publicado el: 22 Oct 2024</span>
@@ -68,7 +68,7 @@
             </div>
             <div class="cards card-2">
                 <div class="card-content">
-                    <span class="tag">Conferencia</span>
+                    <span class="tag tag-business">Conferencia</span>
                     <h2 class="title">Conferencia de Seguridad</h2>
                     <p class="description">Descripción breve sobre los temas discutidos.</p>
                     <span class="date">Publicado el: 15 Oct 2024</span>
@@ -76,7 +76,7 @@
             </div>
             <div class="cards card-3">
                 <div class="card-content">
-                    <span class="tag">Workshop</span>
+                    <span class="tag tag-technology">Workshop</span>
                     <h2 class="title">Taller de Desarrollo Web</h2>
                     <p class="description">Introducción a herramientas de desarrollo moderno.</p>
                     <span class="date">Publicado el: 10 Oct 2024</span>
@@ -84,7 +84,7 @@
             </div>
             <div class="cards card-4">
                 <div class="card-content">
-                    <span class="tag">Meetup</span>
+                    <span class="tag tag-lifestyle">Meetup</span>
                     <h2 class="title">Reunión de Desarrolladores</h2>
                     <p class="description">Discutiendo nuevas tendencias en desarrollo.</p>
                     <span class="date">Publicado el: 5 Oct 2024</span>
@@ -93,37 +93,10 @@
         </section>
         <!--=========================================================-->>
 
+        <!--=================================== first section test=====================-->
 
 
-        <section id="categories" class="mb-5">
-            <h2>Categories</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Category 1</h5>
-                            <p class="card-text">Description of Category 1</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Category 2</h5>
-                            <p class="card-text">Description of Category 2</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Category 3</h5>
-                            <p class="card-text">Description of Category 3</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!--=================================== first section test=====================-->
 
         <section id="polls" class="mb-5">
             <h2>Polls</h2>
